# playground-guidance-agent

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  DOCKER_QUICK_START.md  Dockerfile  E2E_TESTING_SUMMARY.md  E2E_TEST_STATUS.md  NUXT_MIGRATION_COMPLETE.md  NUXT_MIGRATION_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_STATS.md  PHASE1_SUMMARY.md  PHASE2_UI_SUMMARY.md  RADIO_BUTTON_FIX_SUMMARY.md  RADIO_BUTTON_TEST_EXAMPLES.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test_validation_reasoning.py
alembic/: env.py
docs/: API_INTEGRATION.md  API_QUICKSTART.md  DEPLOYMENT.md  DOCKER_SETUP.md  EMBEDDING_DIMENSIONS.md  KNOWLEDGE_BASE_BOOTSTRAP.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PRODUCTION_CHECKLIST.md  TESTING.md
examples/: phase1_demo.py
frontend/: .gitignore  Dockerfile  README.md  SETUP_SUMMARY.md  apply_dark_mode_admin.py  audit-capture.cjs  capture-dark-mode.mjs  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  qa-consultations.mjs  test-consultations-page.spec.ts  test-memories-final.mjs  test-memories-page.js  test-memories-page.mjs  tsconfig.json  vitest.config.ts
frontend-nuxt/: .dockerignore  .env.example  QUICK_START.md  nuxt.config.ts  package-lock.json  qa-test.sh
scripts/: backup.sh  bootstrap_all_knowledge.py  bootstrap_fca_knowledge.py  deploy.sh  generate_seed_cases.py  generate_seed_rules.py  init_db.py  init_db_alembic.py  load_pension_knowledge.py  migrate.sh  review_consultations.py  seed.sh  start-dev.sh  stop-dev.sh  (+3 more)
(+334 files in other folders)
